--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -60,7 +60,7 @@
         
         // Socket connector
         function createWebSocket() {
-            host = "ws://" + window.location.host + "/" + window.location.pathname;
+            host = "ws://" + window.location.host + "/mobilestation/";
 
             if(window.MozWebSocket)
                 window.WebSocket=window.MozWebSocket;
