--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -71,10 +71,13 @@
 							}
 						}
 						break;
-					case "setData":
-						document.getElementById("info").innerHTML = data[1].description;
-						showDevices(data[2]);
-					break;
+					case "setInfo":
+						document.getElementById("name").innerHTML = "[ " + data[1] + " ]";
+						document.getElementById("info").innerHTML = data[2];
+						break;
+					case "setDevices":
+						showDevices(data[1]);
+						break;
                 }
             } catch(exception) {}
         }
@@ -112,8 +115,8 @@
     </script>
 </head>
 <body>
-<h2>ATS Mobile Station</h2>
-<b>Description :</b><span style="color: #666699;"><em><label id="info"/></span> 
+<h2><span style="color: #3b3349;"><p>ATS Mobile Station <em><label id="name"/></p></span></h2>
+<b>Description : </b><span style="color: #666699;"><em><label id="info"/></span> 
     <div style="height:95%; width:100%">
         <div style="width:100%%; height:100%; float: left">
             <ul id="listDevices"></ul>
