--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -105,7 +105,7 @@
         
         // Socket connector
         function createWebSocket() {
-            host = "ws://" + window.location.host + "/mobilestation/";
+            host = "ws://" + window.location.host + "/";
 
             if(window.MozWebSocket)
                 window.WebSocket=window.MozWebSocket;
