--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -4,7 +4,8 @@
     <style type="text/css">
 		ul {
 		  list-style: none;
-		}
+            text-align: middle;
+        }
 
 		ul li::before {
 		  content: "\2022";
