Add catchGesture action

--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -133,7 +133,7 @@
 <h2><span style="color: #3b3349;"><p>ATS Mobile Station <em><label id="name"/></p></span></h2>
 <b>Description : </b><span style="color: #666699;"><em><label id="info"/></span>
 <div style="height:95%; width:100%">
-    <div style="width:100%%; height:100%; float: left">
+    <div style="width:100%; height:100%; float: left">
         <ul id="listDevices"></ul>
     </div>
 </div></body><html>
