--- a/src/assets/tools/monaserver/server/www/index.html
+++ b/src/assets/tools/monaserver/server/www/index.html
@@ -112,7 +112,7 @@
 
         // Socket connector
         function createWebSocket() {
-            host = "ws://" + window.location.host + "/";
+            host = "ws://" + window.location.host + "/api";
 
             if(window.MozWebSocket)
                 window.WebSocket=window.MozWebSocket;
